[package]
name = "stm32f412gdiscovery"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
components = { path = "../../tock/boards/components" }
cortexm4 = { path = "../../tock/arch/cortex-m4" }
capsules = { path = "../../tock/capsules" }
kernel = { path = "../../tock/kernel" }
stm32f412g = { path = "../../tock/chips/stm32f412g" }
drivers = { path = "../drivers" }
